更换接口为酷狗（其他接口暂时不可用）

--- a/src/main/resources/static/css/player.css
+++ b/src/main/resources/static/css/player.css
@@ -546,7 +546,7 @@ body {
 }
 /* 正在播放的那一句歌词 */
 #lyric .lplaying {
-    color: #31c27c;
+    color: #2d71c2;
 }
 /* 歌词显示区显示的提示语(如加载中、无歌词等) */
 .lyric-tip {
